# dead-disco

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb
examples/: faded_roulette.rs  led_roulette.rs  led_roulette_with_timer_interrupts.rs
src/: leds.rs  lib.rs
