[package]
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "dead-disco"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
#cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"
embedded-hal = "0.2"
nb = "0.1.2"
heapless = "0.5.6"

[dependencies.stm32f3xx-hal]
version = "^0.6.1"
features = ["stm32f303xc", "rt"]

[dependencies.stm32f3]
version = "^0.12.1"
features = ["stm32f303", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
